--- a/public/css/home.css
+++ b/public/css/home.css
@@ -122,6 +122,7 @@ header img {
     text-align: center;
     box-sizing: border-box;
     padding-top: 10px;
+    height: 160px !important;
 }
 
 .card-header {
