--- a/src/views/novaSenha.ejs
+++ b/src/views/novaSenha.ejs
@@ -29,6 +29,7 @@
                 <label for="confirmSenha" class="form-label">Repetir Senha</label>
                 <input type="password" id="confirmSenha" class="form-control" placeholder="Repita sua Nova Senha" required>
               </div>
+              <input name="id" id="IDUser" value="<%= id %>" hidden>
              
               <button type="submit" class="btn btn-primary button">Pronto</button>
         </form>
