--- a/public/css/adminCars.css
+++ b/public/css/adminCars.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 body {
-    background-color: black !important;
+    background-color: #252525 !important;
     font-family: "Roboto", system-ui;
     font-weight: 400;
     font-style: normal;
