--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,14 +7,22 @@ form input{
     color: white !important;
 }
 
-body{
+body.light-mode form input{
+    color: rgb(0, 0, 0) !important;
+}
+
+body {
     background-color: #252525 !important;
     color: white !important;
-    scale: 0.9;
+    transform: scale(0.9); 
 }
-:placeholder-shown.dark-mode
-{
-    color: black !important;
+
+body.light-mode input::placeholder,
+body.light-mode textarea::placeholder {
+    color: #242222b4 !important;
+}
+body.light-mode {
+    color: rgba(0, 0, 0, 0.517) !important;
 }
 
 main{
