--- a/src/views/homePageUser.ejs
+++ b/src/views/homePageUser.ejs
@@ -3,22 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/setMode.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="/js/setMode.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <title>Home</title>
 </head>
-<body>
+<body class='modeAtual'>
     <header>
+
         <div class="navegacao">
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4 links">
                     <a href="/userCars/<%=login.IDUser%>" class="text-white h4 ancora">Meu carro</a>
                     <a href="/minhaConta/<%=login.IDUser%>" class="text-white h4 ancora">Minha conta</a> 
-                    <a href="/notification" class="text-white h4 ancora">Notificações</a>
+                    <a href="#" class="text-white h4 ancora">Notificações</a> 
                     <a href="/" class="text-white h4 ancora">Sair</a>
+                    <div class="modeCenter">
+                        <div class="mode">
+                          <img id="modeToggle" onclick="toggleDarkMode()" class="setModeIcon" src="/img/moon.png" alt="Toggle Dark Mode">
+                        </div>
+                    </div>
                 </div>
             </div>
             <nav class="navbar navbar-dark bg-dark">
@@ -31,6 +40,12 @@
         </div>
 
         <div class="content">
+            
+        <div class="modeCenter-mobile">
+            <div class="mode">
+              <img id="modeToggle" onclick="toggleDarkMode()" class="setModeIcon" src="/img/moon.png" alt="Toggle Dark Mode">
+            </div>
+        </div>
             <p class="hello">Olá, <%=login.Name %></p>
             <img class="car" src="/img/gol.png" alt="">
         </div>
@@ -94,12 +109,10 @@
     </main>
 
     <footer>
-        <img class="icon" src="/img/car.png">
-        <img class="icon" src="/img/notification.png">
-        <img class="icon" src="/img/home.png">
-        <img class="icon" src="/img/user.png">
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <a href="/userCars/<%=login.IDUser%>"><img class="icon" src="/img/car.png"></a>
+        <a href="#"><img class="icon" src="/img/notification.png"></a>
+        <a href="#"><img class="icon" src="/img/home.png"></a>
+        <a href="/minhaConta/<%=login.IDUser%>"><img class="icon" src="/img/user.png"></a>
+ </footer>
 </body>
 </html>
