--- a/src/views/minhaConta.ejs
+++ b/src/views/minhaConta.ejs
@@ -54,10 +54,10 @@
                   <input type="text" class="form-control" id="userEmail" name="userEmail" value="<%=currentUser.Email %>">
                 </div>
 
-                <div class="col-12">
+                <!-- <div class="col-12">
                   <label for="inputAddress" class="form-label">Senha</label>
-                  <input type="text" class="form-control" id="userPassword" name="userPassword" value="<%=currentUser.Password%>">
-                </div>
+                  <input type="text" class="form-control" id="userPassword" name="userPassword" value="<%=//currentUser.Password%>">
+                </div> -->
 
                 <div class="col-12">
                     <label for="inputAddress" class="form-label">Permissão</label>
@@ -74,10 +74,10 @@
     <hr>
 
     <footer>
-        <img class="icon" src="/img/car.png" alt="">
-        <img class="icon" src="/img/notification.png" alt="">
-        <img class="icon" src="/img/home.png" alt="">
-        <img class="icon" src="/img/user.png" alt="">
+      <a href="/userCars/<%=id%>"><img class="icon" src="/img/car.png"></a>
+      <a href="#"><img class="icon" src="/img/notification.png"></a>
+      <a href="/homePageUser/<%=id%>"><img class="icon" src="/img/home.png"></a>
+      <a href="#"><img class="icon" src="/img/user.png"></a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
