--- a/src/views/userCars.ejs
+++ b/src/views/userCars.ejs
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/userCars.css">
+    <link rel="stylesheet" href="/css/setMode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <script src="/js/setMode.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+    <title>Carros</title>
 </head>
-<body>
+<body class='modeAtual'>
     <header>
         <div class="navegacao">
             <div class="collapse" id="navbarToggleExternalContent">
@@ -28,29 +31,34 @@
             </nav>
         </div>
     </header>
+
     <main>
         
-        <h1>Seus Carros</h1>
+        <h1 class="title-page" >Seus Carros</h1>
         
         <% for(let i = 0; i < vehicles.length; i++) { %>
             
             <div class="cards-admin">
-                <div class="card-header">
-                    <a href="/car/<%= idUser %>/<%= vehicles[i].IDVehicle %>"><h1><%= vehicles[i].Model %></h1></a>
-                    <!-- <img class="icon" src="img/avançar-light.png" alt=""> -->
+                <div class="card-content">
+                    <h1><%=  vehicles[i].Model%></h1>
+                    <h1><%=vehicles[i].Year%></h1>
+                    <a href="/car/<%= idUser %>/<%= vehicles[i].IDVehicle %>"> <img class="icon" src="/img/avançar-light.png" alt=""></a>
                 </div>
             </div>
             
         <% } %>
 
-        <a href="/registerCar/<%=idUser%>">Adicionar Carro</a>
+        <div class="center-button">
+            <button class="adc-car" ><a href="/registerCar/<%=idUser%>">Adicionar Carro</a>
+            </button>
+        </div>
 
     </main>
     <footer>
-        <!-- <img class="icon" src="img/car.png" alt="">
-        <img class="icon" src="img/notification.png" alt="">
-        <img class="icon" src="img/home.png" alt="">
-        <img class="icon" src="img/user.png" alt=""> -->
-    </footer>
+        <a href="#"><img class="icon" src="/img/car.png"></a>
+        <a href="#"><img class="icon" src="/img/notification.png"></a>
+        <a href="/homePageUser/<%=idUser%>"><img class="icon" src="/img/home.png"></a>
+        <a href="/minhaConta/<%=idUser%>"><img class="icon" src="/img/user.png"></a>
+  </footer>
 </body>
 </html>
