--- a/public/css/userCars.css
+++ b/public/css/userCars.css
@@ -23,6 +23,11 @@ header {
     flex-direction: column;
     align-items: center;
 }
+.bg-dark.p-4
+{
+    display: flex;
+    flex-direction: column;
+}
 
 .content {
     padding: 4%;
