ajustes no modal

--- a/src/views/homePageUser.ejs
+++ b/src/views/homePageUser.ejs
@@ -71,7 +71,7 @@
             <div class="card-content">
                 <p>Saudável</p>
             </div>
-            <button type="submit" class="details">detalhes</button>
+            <button type="submit" class="details">DETALHES</button>
         </div>
 
         <div class="cards">
@@ -82,7 +82,7 @@
             <div class="card-content">
                 <p>33L</p>
             </div>
-            <button type="submit" class="details">detalhes</button>
+            <button type="submit" class="details">DETALHES</button>
         </div>
 
         <div class="cards">
@@ -93,7 +93,7 @@
             <div class="card-content">
                 <p>NÍVEL ALTO</p>
             </div>
-            <button type="submit" class="details">detalhes</button>
+            <button type="submit" class="details">DETALHES</button>
         </div>
 
         <div class="cards">
@@ -104,7 +104,7 @@
             <div class="card-content">
                 <p>NÍVEL MÉDIO</p>
             </div>
-            <button type="submit" class="details">detalhes</button>
+            <button type="submit" class="details">DETALHES</button>
         </div>
     </main>
 
