--- a/src/views/informacoesUsers.ejs
+++ b/src/views/informacoesUsers.ejs
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="/css/setMode.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <script src="/js/setMode.js"></script>
+    <script src="/js/setMode.js" defer></script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <title>usuário</title>
 </head>
-<body  class='modeAtual'>
+<body class='modeAtual'>
 
     <header>
 
