--- a/src/views/viewCar.ejs
+++ b/src/views/viewCar.ejs
@@ -4,25 +4,25 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/mapStyle.css">
+        <link rel="stylesheet" href="/css/car.css">
+        <link rel="stylesheet" href="/css/setMode.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
         <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
         <script src="/js/mapScript.js" defer></script>
+        <script src="/js/setMode.js" defer></script>
         <title>Avaliação</title>
     </head>
     
-    <body onload="updateMarker(<%= car['CarInfo.Latitude'] %>, <%= car['CarInfo.Longitude'] %>)">
+    <body class='modeAtual' onload="updateMarker(<%= car['CarInfo.Latitude'] %>, <%= car['CarInfo.Longitude'] %>)">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 
     <!-- Modal Editar -->
@@ -83,54 +83,58 @@
     </div>
 
     <header>
-        <div class="d-flex align-items-center p-3 border-bottom shadow">
-            <a href="/userCars/<%= idUser %>">
-                <div class="d-flex align-items-center">
-                    <h5 id="systemName" class="my-0 mr-md-auto">
-                        Voltar
-                    </h5>
+
+        <div class="navegacao">
+            <div class="collapse" id="navbarToggleExternalContent">
+                <div class="bg-dark p-4 links">
+                    <a href="/homePageUser/<%=idUser%>" class="text-white h4 ancora">Home</a>
+                    <a href="/userCars/<%=idUser%>" class="text-white h4 ancora">Meu carro</a>
+                    <a href="/minhaConta/<%=idUser%>" class="text-white h4 ancora">Minha conta</a> 
+                    <a href="/" class="text-white h4 ancora">Sair</a>
                 </div>
-            </a>
+            </div>
+            <nav class="navbar navbar-dark bg-dark custom-shadow ">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+            </nav>
         </div>
+
     </header>
 
     <main>
 
-        <div id="map"></div>
-
-        <div>
-            <h2><%= car.Brand %></h2>
-            <h2><%= car.Model %></h2>
-            <h2><%= car.Plate %></h2>
-            <h2><%= car.Year %></h2>
-
-            <p>Year: <%= car['CarInfo.Kms'] %></p>
-            <p>Gasolina (Litros): <%= car['CarInfo.Gas'] %></p>
-            <p>Nível de Óleo: <%= car['CarInfo.Oil'] ? 'Ok': 'Baixo' %></p>
-            <p>Temperatura: <%= car['CarInfo.Temperature'] %>°</p>
-            <p>Bateria: <%= car['CarInfo.Battery'] %></p>
-        </div>
-
-        <!-- <button
-            data-toggle="modal" data-target="#modalEdit"
-            data-id="<%= car.IDUser %>">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="black" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                <path
-                d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-                <path fill-rule="evenodd"
-                d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
-            </svg>
-        </button> -->
-
-        <button data-id="<%= car.IDUser %>" data-toggle="modal" data-target="#modalDelete" >
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#b35c5c" class="bi bi-trash3-fill" viewBox="0 0 16 16">
-                <path
-                    d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
-            </svg>
-        </button>
-
-
-    </main>
+        <main>
+            <a href=""><button>voltar</button></a>
+            <div id="map"></div>
+        
+            <div class="info-box">
+                <h3><%= car.Brand %></h3>
+                <p><strong>Modelo:</strong> <%= car.Model %></p>
+                <p><strong>Placa:</strong> <%= car.Plate %></p>
+                <p><strong>Ano:</strong> <%= car.Year %></p>
+                <p><strong>Quilometragem:</strong> <%= car['CarInfo.Kms'] %></p>
+                <p><strong>Gasolina (Litros):</strong> <%= car['CarInfo.Gas'] %></p>
+                <p><strong>Nível de Óleo:</strong> <%= car['CarInfo.Oil'] ? 'Ok': 'Baixo' %></p>
+                <p><strong>Temperatura:</strong> <%= car['CarInfo.Temperature'] %>°</p>
+                <p><strong>Bateria:</strong> <%= car['CarInfo.Battery'] %></p>
+            </div>
+        
+            <!-- <button data-toggle="modal" data-target="#modalEdit" data-id="<%= car.IDUser %>">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="black" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+                </svg>
+            </button> -->
+        
+            <button data-id="<%= car.IDUser %>" data-toggle="modal" data-target="#modalDelete">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#b35c5c" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                    <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
+                </svg>
+            </button>
+        </main>
 
 </body>
 
