--- a/src/views/viewCar.ejs
+++ b/src/views/viewCar.ejs
@@ -107,7 +107,7 @@
     <main>
 
         <main>
-            <a href=""><button>voltar</button></a>
+            <a href="/usercars/<%=idUser %>"><button>voltar</button></a>
             <div id="map"></div>
         
             <div class="info-box">
