--- a/public/css/userCars.css
+++ b/public/css/userCars.css
@@ -128,7 +128,6 @@ header img {
     padding: 3%;
     border-radius: 10px;
 }
-
 .cards-admin {
     background-color: rgba(54, 53, 53, 0.896);
     color: white;
@@ -136,17 +135,15 @@ header img {
     border: none;
     position: relative;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+
+    align-items: center; 
     text-align: center;
     box-sizing: border-box;
-    padding-top: 10px;
+    padding: 20px; 
     margin: 20px;
     transition: background-color 0.3s ease;
     width: 310px; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 150px; 
 }
 
 .card-header {
@@ -172,18 +169,16 @@ header img {
     text-align: left;
     margin-left: 7px;
 }
-
 .card-content {
-    flex-grow: 1;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: center; 
+    align-items: center; 
     width: 100%;
-    margin-bottom: 40px;
+    height: 100%; 
     margin-left: 10px;
-    justify-content: center;
-    align-items: center;
 }
+
+
 
 .cards-admin p {
     margin: 0;
@@ -227,6 +222,17 @@ header img {
     background-color: rgb(69, 65, 65);
 }
 
+.cards-admin h1 {
+    font-size: 15px;
+    margin: 0;
+}
+
+.cards-admin img {
+    max-width: 30px;
+    cursor: pointer;
+    margin: 10px 0; /* Ajuste o margin conforme necessário */
+}
+
 .icon {
     max-width: 30px;
 }
@@ -255,6 +261,7 @@ footer {
     flex-wrap: wrap;
     gap: 20px;
 }
+
 
 @media (max-width: 719px) {
     header .navegacao {
