--- a/public/css/setMode.css
+++ b/public/css/setMode.css
@@ -6,17 +6,16 @@ body.light-mode
 
 body.light-mode #searchBar{
 color: white;
-   background-color: black;
+    background-color: #222222 !important;
 }
 
 body.light-mode .cards-admin {
-    background-color: black;
+    background-color: #222222 !important;
 }
 
 body.light-mode .cards-admin:hover{
     background-color: rgb(65, 62, 62);
 }
-
 
 body.light-mode .title-gerenciamento {
     color: black;
@@ -24,10 +23,10 @@ body.light-mode .title-gerenciamento {
 
 body.light-mode input::placeholder,
 body.light-mode textarea::placeholder {
-    color: #242222b4 !important;
+    color: #ffffffb4 !important;
 }
 body.light-mode .title-page{
-    color: black !important;
+    color: rgb(236, 233, 233) !important;
 }
 
 .modeCenter
