--- a/src/views/homePageAdmin.ejs
+++ b/src/views/homePageAdmin.ejs
@@ -42,6 +42,13 @@
         </div>
 
         <div class="content" >
+
+            <div class="modeCenter-mobile">
+                <div class="mode">
+                  <img id="modeToggle" onclick="toggleDarkMode()" class="setModeIcon" src="/img/moon.png" alt="Toggle Dark Mode">
+                </div>
+            </div>
+
             <p class="hello">OLÁ, ADMINISTRADOR! </p>
             <p class="title-gerenciamento">GERENCIAMENTO DE <br> USUÁRIOS</p>
         </div>
