--- a/src/views/informacoesUsers.ejs
+++ b/src/views/informacoesUsers.ejs
@@ -71,10 +71,10 @@
     <hr>
 
     <footer>
-        <img class="icon" src="/img/car.png" alt="">
-        <img class="icon" src="/img/notification.png" alt="">
-        <img class="icon" src="/img/home.png" alt="">
-        <img class="icon" src="/img/user.png" alt="">
+        <a href="/allCars/<%=admin%>"><img class="icon" src="/img/car.png" alt=""></a>
+        <a href="#"><img class="icon" src="/img/notification.png" alt=""></a>
+        <a href="/homePageAdmin/<%=admin%>"><img class="icon" src="/img/home.png" alt=""></a>
+        <a href="/minhaConta/<%=admin%>" > <img class="icon" src="/img/user.png" alt=""></a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
