troca de carros funcionando

--- a/src/views/homePageUser.ejs
+++ b/src/views/homePageUser.ejs
@@ -80,7 +80,7 @@
             </div>
             <div class="card-content">
                 <p> 
-                  <%= vehiclesUser && vehiclesUser[0].length > 0 ? vehiclesUser[0].KMs + ' KM' : "AINDA NÃO HÁ DADOS" %> 
+                  <%= vehiclesUser && vehiclesUser[0].KMs != null ? vehiclesUser[0].KMs + ' KM' : "AINDA NÃO HÁ DADOS" %> 
                 </p>
             </div>
         </div>
@@ -92,12 +92,16 @@
             </div>
             <div class="card-content">
                 <p>
-                  <%= vehiclesUser && vehiclesUser[0].length > 0 ? 
-                      vehiclesUser[0].Battery >= 12.6 ? "COMPLETAMENTE SAUDÁVEL" :
-                      vehiclesUser[0].Battery >= 12.4 ? "SAUDÁVEL" :
-                      vehiclesUser[0].Battery >= 12.2 ? "ATENÇÃO, BATERIA BAIXA" :
-                      "BATERIA PRECISA SER SUBSTITUÍDA" : "AINDA NÃO HÁ DADOS" 
-                  %>
+                    <%= 
+                    
+                    vehiclesUser && vehiclesUser.length > 0 && vehiclesUser[0].Battery != null ? 
+                    vehiclesUser[0].Battery >= 12.6 ? "COMPLETAMENTE SAUDÁVEL" :
+                    vehiclesUser[0].Battery >= 12.4 ? "SAUDÁVEL" :
+                    vehiclesUser[0].Battery >= 12.2 ? "ATENÇÃO, BATERIA BAIXA" :
+                    vehiclesUser[0].Battery < 12.2 &&  vehiclesUser[0].Battery > 0 ? "BATERIA PRECISA SER SUBSTITUÍDA" : "AINDA NÃO HÁ DADOS" : 
+                    "AINDA NÃO HÁ DADOS"
+                    %>
+
                 </p>
             </div>
             <button type="submit" class="details">detalhes</button>
@@ -110,7 +114,7 @@
             </div>
             <div class="card-content">
                 <p>
-                  <%= vehiclesUser && vehiclesUser[0].length > 0 && vehiclesUser[0].Gas !== undefined ? vehiclesUser[0].Gas + "L" : "AINDA NÃO HÁ DADOS" %> 
+                  <%= vehiclesUser && vehiclesUser.length > 0 && vehiclesUser[0].Gas != undefined ? vehiclesUser[0].Gas + "L" : "AINDA NÃO HÁ DADOS" %> 
                 </p>
             </div>
             <button type="submit" class="details">detalhes</button>
@@ -123,7 +127,7 @@
             </div>
             <div class="card-content">
                 <p>
-                  <%= vehiclesUser && vehiclesUser[0].length > 0 && vehiclesUser[0].Oil !== undefined ? 
+                  <%= vehiclesUser && vehiclesUser.length > 0 && vehiclesUser[0].Oil != undefined ? 
                       vehiclesUser[0].Oil > 1.5 ? "NÍVEL OK" : "PRECISA REPOR" 
                       : "AINDA NÃO HÁ DADOS" 
                   %>
@@ -139,7 +143,7 @@
             </div>
             <div class="card-content">
                 <p>
-                  <%= vehiclesUser && vehiclesUser[0].length > 0 && vehiclesUser[0].water !== undefined ? 
+                  <%= vehiclesUser && vehiclesUser.length > 0 && vehiclesUser[0].water != undefined ? 
                       vehiclesUser[0].water > 2.5 ? "NÍVEL ALTO" : 
                       vehiclesUser[0].water > 1.5 ? "NÍVEL MÉDIO" : "NÍVEL BAIXO" 
                       : "AINDA NÃO HÁ DADOS" 
@@ -171,37 +175,33 @@
         const oilElement = document.querySelector('.cards:nth-of-type(4) .card-content p');
         const waterElement = document.querySelector('.cards:nth-of-type(5) .card-content p');
 
-        kmElement.textContent = vehiclesUser[index].KMs + " KM";
+        kmElement.textContent = vehiclesUser && vehiclesUser[index].KMs != null ? vehiclesUser[index].KMs + ' KM' : "AINDA NÃO HÁ DADOS" ;
+    
+        batteryElement.textContent = vehiclesUser && vehiclesUser[index].Battery != null ? 
+                    vehiclesUser[index].Battery >= 12.6 ? "COMPLETAMENTE SAUDÁVEL" :
+                    vehiclesUser[index].Battery >= 12.4 ? "SAUDÁVEL" :
+                    vehiclesUser[index].Battery >= 12.2 ? "ATENÇÃO, BATERIA BAIXA" : 
+                    "BATERIA PRECISA SER SUBSTITUÍDA" : "AINDA NÃO HÁ DADOS";
+      
+        gasElement.textContent = vehiclesUser && vehiclesUser.length > 0 && vehiclesUser[index].Gas != undefined ? vehiclesUser[index].Gas + "L" : "AINDA NÃO HÁ DADOS";
         
-        if (vehiclesUser[index].Battery >= 12.6) {
-            batteryElement.textContent = "COMPLETAMENTE SAUDÁVEL";
-        } else if (vehiclesUser[index].Battery >= 12.4) {
-            batteryElement.textContent = "SAUDÁVEL";
-        } else if (vehiclesUser[index].Battery >= 12.2) {
-            batteryElement.textContent = "ATENÇÃO, BATERIA BAIXA";
-        } else {
-            batteryElement.textContent = "BATERIA PRECISA SER SUBSTITUÍDA";
-        }
-
-        gasElement.textContent = vehiclesUser[index].Gas + "L";
+        oilElement.textContent =  vehiclesUser && vehiclesUser.length > 0 && vehiclesUser[index].Oil != undefined ? 
+                      vehiclesUser[index].Oil > 1.5 ? "NÍVEL OK" : "PRECISA REPOR" : "AINDA NÃO HÁ DADOS" ;
         
-        oilElement.textContent = vehiclesUser[index].Oil > 1.5 ? "NÍVEL OK" : "PRECISA REPOR";
-        
-        if (vehiclesUser[index].water > 2.5) {
-            waterElement.textContent = "NÍVEL ALTO";
-        } else if (vehiclesUser[index].water > 1.5) {
-            waterElement.textContent = "NÍVEL MÉDIO";
-        } else {
-            waterElement.textContent = "NÍVEL BAIXO";
-        }
+       
+        waterElement.textContent = vehiclesUser && vehiclesUser.length > 0 && vehiclesUser[index].water != undefined ? 
+                      vehiclesUser[index].water > 2.5 ? "NÍVEL ALTO" : 
+                      vehiclesUser[index].water > 1.5 ? "NÍVEL MÉDIO" : "NÍVEL BAIXO" : "AINDA NÃO HÁ DADOS" ;
     }
 
     troca.addEventListener("click", function() {
         currentIndex = (currentIndex + 1) % vehiclesUser.length;
         
         updateVehicleData(currentIndex);
+        console.log(currentIndex)
     });
 
+    // console.log(<%=//JSON.stringify(vehiclesUser)%>)
 
  </script>
 </body>
